# omen

./: .gitignore  ARCHITECTURE.md  BLENDER_ADDON.md  CLAUDE.md  CLAUDE_POLICY.md  LICENSE.md  PROJECT_INDEX.md  README.md  SETUP.md  __init__.py  complex_scene.py  dev_setup.sh  hermes_conversation_20260513_235149.json  main.py  pixi.toml  pyproject.toml  pyproject.toml.txt  requirements.txt  setup.sh
docs/: ARCHITECTURE.md  BLENDER_TIER1_ARCHITECTURE.md  BPY_MITSUBA_FINDINGS.md  BUG_REPORT_conv_transpose_multi.md  COMMUNICATION_OVERHEAD_ANALYSIS.md  CYCLES_VS_MOJO_GPU_ANALYSIS.md  DEEP_RESEARCH_CONTRIBUTION_ROADMAP.md  JEPA_DENOISER_ADDON_PLAN.md  JEPA_MITSUBA_INTEGRATION.md  JEPA_WORLD_MODELS_AUTONOMOUS_DRIVING_RESEARCH.md  NABLA_STUDY.md  lewm_technical_reference.md  mitsuba3-diff-rendering-reference.md
integrator-package/: README.md  pyproject.toml
pip-unpack-0hob4dcr/: nabla_ml-26.2251344-py3-none-any.whl.metadata
pip-unpack-hz7y4kal/: modular-26.4.0.dev2026051106-py3-none-any.whl
scripts/: build_addon.py  start_training.py  start_training.sh  test_e2e_training.py  test_realize_batch.py  train_tmux.sh
tests/: _render_helper.py  _render_helper_full.py  gpu_stress.mojo  mojo_decoder.mojo  mojo_gpu_denoiser.mojo  test_activations_nan.py  test_checkpoint.py  test_denoiser.py  test_dlpack_bridge.py  test_fix_training_wiring.py  test_functional_trainer.py  test_gpu_16layer_narrow.py  test_gpu_aov_conv2d_compare.py  test_gpu_capacity.py  test_gpu_micro_prototype.py  test_gpu_mojo_conv2d_backward.py  test_gpu_native_conv_train.py  test_gpu_omen_scale.py  test_gpu_omen_train.py  test_gpu_tiled_aov_denoiser.py  test_mojo_combo_diag.py  test_mojo_gpu_diag.py  test_mojo_tiled_denoiser.mojo  test_mojo_tiled_denoiser_pywrapper.py  test_motion.py  test_nabla_smoke.py  test_ram_leak.py  test_scene_extractor.py  test_temporal.py  (+2 more)
(+223 files in other folders)
