[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omen-integrator"
version = "0.1.0"
description = "Mitsuba 3 integrator with JEPA acceleration"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "mitsuba>=3.8.0",
    "drjit>=0.5.0",
    "pytest>=9.0.3",
    "hypothesis>=6.152.7",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"omen_integrator" = ["*.py"]
