[project]
name = "omen"
version = "0.1.0"
description = "Omen — Mojo GPU denoiser for Blender"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "drjit>=1.3.1",
    "max",
    "mitsuba>=3.8.0",
    "modular",
    "mojo",
    "nabla-ml",
    "numpy",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "max-shmem-libs>=26.4.0.dev2026051506"
]

[tool.uv]
extra-index-url = ["https://whl.modular.com/nightly/simple/"]
prerelease = "allow"
